--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "build": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cli-spinner": "^0.2.10",
+    "colors": "^1.3.3",
     "moment": "^2.24.0"
   }
 }
