--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.18.0",
     "cli-spinner": "^0.2.10",
     "colors": "^1.3.3",
+    "dotenv": "^8.0.0",
     "moment": "^2.24.0"
   }
 }
