--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cli-spinner": "^0.2.10",
     "colors": "^1.3.3",
     "dotenv": "^8.0.0",
-    "moment": "^2.24.0"
+    "enquirer": "^2.3.0",
+    "moment": "^2.24.0",
+    "prompt-checkbox": "^2.2.0"
   }
 }
